[tool.poetry]
name = "tor-relay-scanner"
version = "0.1.0"
description = ""
authors = ["Dmitry Morozov <morozov124@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "==2.32.4"
pydantic = "^2.10.6"
types-requests = "^2.32.0.20250306"
pydantic-settings = "^2.8.1"
urllib3 = "==2.5.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
console_output_style = "progress"
pythonpath = "."
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope="module"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
